fix: fix overflow problems

--- a/singolo2.css
+++ b/singolo2.css
@@ -7,6 +7,8 @@
     text-align: justify;
 }
 
+/* Portfolio */
+
 .portfolio {
     background-color: #2d303a;
     border-bottom: 6px solid #323746;
@@ -53,6 +55,8 @@
     grid-template-rows: repeat(3, 1fr);
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 20px;
+    max-height: 601px;
+    overflow: hidden;
 }
 
 .portfolio_images div {
@@ -63,6 +67,8 @@
 .portfolio_images img {
     width: 100%;
 }
+
+/* About us */
 
 .about_us {
     background-color: #f2f2f2;
@@ -108,6 +114,9 @@
     margin: 0;
     padding-top: 15px;
     letter-spacing: -0.3px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .about_us_member p {
